--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -9,6 +9,17 @@ body {
   line-height: 1.5;
   color: #606c71; }
 
+#floating-nav-content {
+            top: 0;
+            width: 100%;
+            height: 20px;
+            background-color: #000;
+            position: fixed;
+            display: none;
+            color: #FFF;
+            padding: 5px;
+        }
+
 a {
   color: #1e6bb8;
   text-decoration: none; }
