--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -12,8 +12,9 @@ body {
 #floating-nav-content {
             top: 0;
             width: 100%;
-            height: 20px;
-            background-color: #000;
+            height: 100px;
+            background-color: #159957;
+            background-image: linear-gradient(120deg, #155799, #159957);
             position: fixed;
             display: none;
             color: #FFF;
