--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -9,6 +9,17 @@ body {
   line-height: 1.5;
   color: #606c71; }
 
+#float{
+    position: absolute;
+    top: 0;
+    left: 35%;
+    width: 30%;
+    color: #fff;
+    text-align: center;
+    background-color: #159957;
+    background-image: linear-gradient(120deg, #155799, #159957);
+}
+
 a {
   color: #1e6bb8;
   text-decoration: none; }
