--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -10,14 +10,14 @@ body {
   color: #606c71; }
 
 #float_nav{
-    position: absolute;
+    position: fixed;
     top: 0;
-    left: 35%;
     width: 30%;
     color: #fff;
     text-align: center;
     background-color: #159957;
     background-image: linear-gradient(120deg, #155799, #159957);
+    padding: 5px;
 }
 
 a {
