--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -13,17 +13,14 @@ body {
     position: fixed;
     top: 0;
     width: 100%;
-    height: 70px;
+    height: 65px;
     color: #fff;
     text-align: center;
     background-color: #159957;
+    background: rgba(1,1,1,0.7);
     background-image: linear-gradient(120deg, #155799, #159957);
     padding: 5px;
     opacity: 0.5;
-}
-
-.smooth{
-  opacity: 1;
 }
 
 a {
