--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -9,9 +9,9 @@ body {
   line-height: 1.5;
   color: #606c71; }
 
-div.container {
+/*div.container {
   display:inline-block;
-}
+}*/
 
 #float_nav{
     position: fixed;
